auto jump to the correct section still bug

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,16 @@
 // app global css in SCSS form
+.on-click-highlight {
+  background-color: orange;
+  animation-name: bckanim;
+  animation-fill-mode: forwards;
+  animation-duration: 3s;
+  animation-delay: 0s;
+}
+@keyframes bckanim {
+  0% {
+    background-color: orange;
+  }
+  100% {
+    background-color: transparent;
+  }
+}
